--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game</title>
-
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
-
-</head>
-<body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="img/Genshin.webp" />
+    
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Genshin Memory</title>
+  </head>
+  <body>
     <div class="container">
-
-        <div class="topo">
-            <span>Jogo da Memória - Genshin Impact</span>
-        </div>
-
-        <ul></ul>
+      <h1 class="title">Genshin Memory</h1>
+      <div class="relogio">00</div>
     </div>
-   
-    <script url="/src/script.js"></script>"
-</body>
+
+    <ul class="tabuleiro"></ul>
+
+    <script src="./src/script.js"></script>
+  </body>
 </html>
