--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     <title>Genshin Memory</title>
   </head>
   <body>
-    <div class="container">
-      <h1 class="title">Genshin Memory</h1>
-      <div class="relogio">00</div>
+    <div class="page">
+        <div class="container">
+            <h1 class="title">Genshin Memory</h1>
+            <div class="relogio">00</div>
+          </div>
+      
+          <ul class="tabuleiro"></ul>
     </div>
-
-    <ul class="tabuleiro"></ul>
+    
 
     <script src="./src/script.js"></script>
   </body>
